--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Greg Toler</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
