--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Greg Toler</title>
   <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="icon" href="favicon.png">
+  <link rel="icon" href="Favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
